<resources>
    <string name="app_name">RouteFit</string>
    <string name="title_activity_maps">Map</string>
    <string name="tofood">To Food List</string>
    <string name="toexercise">To Exercise List</string>
    <string name="addFood">Add Food</string>
    <string name="addExercise">Add Exercise</string>
    <string name="examplename">Example Name</string>
    <string name="examplecalories">Example Calories</string>
    <string name="Add">Add</string>
    <string name="addFromList">Add a food from the list below:</string>
    <string name="addFromExList">Add an exercise from the list below:</string>
    <string name="hometext">User Home</string>
    <string name="foodname">Enter Food Name</string>
    <string name="entercal">Enter Calories</string>
    <string name="uploadfood">Upload Food</string>
    <string name="exercisename">Enter Exercise Name</string>
    <string name="entercalperhour">Calories Per Hour</string>
    <string name="uploadexercise">Upload Exercise</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="SettingsSplash">This is settings Fragment</string>
    <string name="calconsumed">Calories Consumed</string>
    <string name="popuptext">Enter Exercise Length (Hours)</string>
    <string name="calsburned" />
    <string name="MapsSplash">This is Maps Fragment</string>
    <string name="NotificationsSplash">This is Notifications Fragment</string>
    <string name="runningWorkoutPartnerPreference">Exercise Type</string>
    <string name="Calorie_text">Today\'s Calories</string>
    <string name="looking_for_partner_title">Map Visiblilty</string>


    <string-array name="popup_spinner">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
    </string-array>


</resources>
