<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dal.cs.mc.routefit.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/navigation_map"
        android:name="dal.cs.mc.routefit.MapsActivity"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dal.cs.mc.routefit.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dal.cs.mc.routefit.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_maps"/>
</navigation>