<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="10"
    app:cardBackgroundColor="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:maxLines="1"
            android:text="@string/examplename"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/foodCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foodName"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:text="@string/examplecalories" />

        <Button
            android:id="@+id/addFood"
            android:layout_width="126dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="269dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"
            android:text="@string/Add"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>