<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_grey300">


    <TextView
        android:id="@+id/calorie_textview_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/Calorie_text"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="412dp"
        android:layout_height="34dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorie_textview_home">

        <TextView
            android:id="@+id/caloriesConsumed"
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text=" Consumed: "
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/caloriesBurned"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text="Burned: "
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/caloriesTotal"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text="Total: "
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/food_list_RecyclerView_home"
        android:layout_width="202dp"
        android:layout_height="592dp"
        app:layout_constraintBottom_toBottomOf="@+id/addFood"
        app:layout_constraintEnd_toStartOf="@+id/addExercise"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="@+id/addFood"
        app:layout_constraintTop_toBottomOf="@+id/calorie_list_seperater"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercise_list_RecyclerView_home"
        android:layout_width="204dp"
        android:layout_height="592dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorie_list_seperater"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/addExercise"
        android:layout_width="204dp"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:text="@string/addExercise"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addFood"
        android:layout_width="204dp"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:text="@string/addFood"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/calorie_list_seperater"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/calorie_list_seperater2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_list_RecyclerView_home" />


</androidx.constraintlayout.widget.ConstraintLayout>